// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommonCard /> should render disabled properly 1`] = `
<div
  class="course-module inactive"
>
  <div
    class="course-module-metadata"
  >
    <strong
      class="type"
    >
      module
    </strong>
    <h3
      class="title"
    >
      Hello world
    </h3>
  </div>
  <div
    class="description"
  >
    <p>
      <strong>
        Lorem lipsum
      </strong>
       dolor sit amed
    </p>
  </div>
  <button>
    Watch
  </button>
</div>
`;

exports[`<CommonCard /> should render empty block properly 1`] = `
<div
  class="course-module"
>
  <div
    class="course-module-metadata"
  />
  <button>
    Checkout
  </button>
</div>
`;

exports[`<CommonCard /> should render properly 1`] = `
<a
  class="course-module clickable"
  href="https://test.com/test"
>
  <div
    class="course-module-metadata"
  >
    <strong
      class="type"
    >
      module
    </strong>
    <h3
      class="title"
    >
      Hello world
    </h3>
  </div>
  <div
    class="description"
  >
    <p>
      <strong>
        Lorem lipsum
      </strong>
       dolor sit amed
    </p>
  </div>
  <button>
    Watch
  </button>
</a>
`;
